Add Firebase w/ Firestore
