# src/entities/DogModel.ts
@@ -1,0 +1,7 @@
+import { DogParam } from './DogParam';
+
+export interface DogModel extends DogParam {
+
+  id: string;
+
+}
