# src/entities/DogParam.ts
@@ -1,0 +1,7 @@
+export interface DogParam {
+  
+  name: string;
+
+  age: number;
+
+}
