# src/routes/DogRoute.ts
@@ -2,36 +2,37 @@
 import { Router } from 'express';
 import { DogRepository } from '../interfaces/DogRepository';
 import { DogService } from '../interfaces/DogService';
-import { Dog } from '../models/Dog';
-import { DogRepositoryMemory } from '../repositories/DogRepositoryMemory';
+import { DogModel } from '../entities/DogModel';
 import { DogServiceImpl } from '../services/DogServiceImpl';
 import { Request } from 'express';
+import DogRepositoryFirestore from '../repositories/DogRepositoryFirestore';
+import { DogParam } from '../entities/DogParam';
 
 const router = Router();
 
-const dogRepository :DogRepository = new DogRepositoryMemory;
+const dogRepository: DogRepository = new DogRepositoryFirestore();
 const dogService: DogService = new DogServiceImpl(dogRepository);
 
-router.get('/', function(req, res) {
-  res.json(dogService.list());
+router.get('/', async (req, res) => {
+  res.json(await dogService.list());
 });
 
-router.get('/:id', (req: Request<{ id: number }>, res) => {
-  res.json(dogService.get(req.params.id));
+router.get('/:id', async (req: Request<{ id: string }>, res) => {
+  res.json(await dogService.get(req.params.id));
 });
 
-router.post('/', (req: Request<{}, {}, Dog>, res) => {
-  const dog: Dog = dogService.add(req.body);
+router.post('/', async (req: Request<{}, {}, DogParam>, res) => {
+  const dog: DogModel = await dogService.add(req.body);
   res.json(dog);
 });
 
-router.put('/:id', (req: Request<{id: number}, {}, Dog>, res) => {
-  const dog: Dog = dogService.update(req.params.id, req.body);
+router.put('/:id', async (req: Request<{ id: string }, {}, DogParam>, res) => {
+  const dog: DogModel = await dogService.update(req.params.id, req.body);
   res.json(dog);
 });
 
-router.delete('/:id', (req: Request<{id: number}>, res) => {
-  const deleted: boolean = dogService.delete(req.params.id);
+router.delete('/:id', async (req: Request<{ id: string }>, res) => {
+  const deleted: boolean = await dogService.delete(req.params.id);
   res.json({ deleted });
 });
 
